# dataprep

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: default_config.yaml
dataprep/: __init__.py
dataprep/core/: __init__.py  base.py  pipeline.py
dataprep/sinks/: __init__.py  csv_sink.py  dataframe_sink.py  json_sink.py  parquet_sink.py
dataprep/sources/: __init__.py  csv_source.py  dataframe_source.py  json_source.py  parquet_source.py
dataprep/transforms/: __init__.py  custom_transform.py  drop_missing.py  feature_selector.py  fill_missing.py  label_encoder.py  normalizer.py  one_hot_encoder.py  outlier_remover.py
examples/: README.md  advanced_pipeline.py  basic_pipeline.py  complete_pipeline_example.py  custom_transform.py  multimodal_example.py  text_pipeline_example.py  yaml_config.py
src/dataprep/: __init__.py  pipeline.py
src/dataprep/multimodal/: __init__.py  image_processor.py  video_processor.py
src/dataprep/quality/: __init__.py  filter.py  scorer.py
src/dataprep/structured/: __init__.py  latex_processor.py  markdown_processor.py  pdf_extractor.py
src/dataprep/text/: __init__.py  cleaner.py  deduplicator.py  html_extractor.py
src/dataprep/utils/: __init__.py
tests/: __init__.py  test_pipeline.py  test_sources_sinks.py  test_transforms.py
